# google-contacts

./: .gitignore  Dockerfile  Makefile  README.md  Token.hs  config.hs  contacts.cabal  google-contacts.cabal  main.hs  mutt-query.hs  package.yaml  stack.yaml
app/: Token.hs
gc-config/: Main.hs
gc-mutt-query/: Main.hs
src/Contacts/: Client.hs  Feed.hs  Format.hs  Options.hs  Query.hs
src/Google/Contacts/: Client.hs  Feed.hs  Query.hs  Token.hs
src/Google/Contacts/Formatters/: Mutt.hs
test/: example.json
test/Google/Contacts/: FeedSpec.hs  QuerySpec.hs
