name:                   contacts
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -static
  exposed-modules:      Contacts.Client
                      , Contacts.Feed
                      , Contacts.Format
                      , Contacts.Options
                      , Contacts.Query
  build-depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , google-oauth2
                      , http-conduit
                      , http-types
                      , optparse-applicative
                      , text
  default-extensions:   OverloadedStrings
                      , RecordWildCards

executable contacts
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -static
  build-depends:        base
                      , contacts
                      , google-oauth2
                      , text
                      --, xdg-basedir
  default-extensions:   OverloadedStrings

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/contacts
