name:                   google-contacts
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -O2 -threaded
  exposed-modules:      Google.Contacts.Client
                      , Google.Contacts.Feed
                      , Google.Contacts.Formatters.Mutt
                      , Google.Contacts.Query
  build-depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , google-oauth2
                      , http-conduit
                      , http-types
                      , text

executable gc-mutt-query
  default-language:     Haskell2010
  main-is:              mutt-query.hs
  ghc-options:          -Wall -O2 -threaded
  build-depends:        base
                      , filepath
                      , google-contacts
                      , google-oauth2
                      , optparse-applicative
                      , text
                      , xdg-basedir

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , google-contacts
                      , aeson
                      , bytestring

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/google-contacts
