name:                   google-contacts
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
synopsis:               Minimal Google Contacts API client
description:            Google Contaacts API client and example usage via an
                        mutt-query executable useful as mutt's query_cmd
cabal-version:          >= 1.10
build-type:             Simple
category:               Network

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Google.Contacts.Client
                      , Google.Contacts.Feed
                      , Google.Contacts.Formatters.Mutt
                      , Google.Contacts.Query
  build-depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , google-oauth2 >= 0.2.0
                      , http-conduit
                      , http-types
                      , text

executable gc-config
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              config.hs
  ghc-options:          -Wall -threaded
  build-depends:        base
                      , filepath
                      , google-oauth2
                      , xdg-basedir

executable gc-mutt-query
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              mutt-query.hs
  ghc-options:          -Wall -threaded
  build-depends:        base
                      , filepath
                      , google-contacts
                      , google-oauth2
                      , optparse-applicative
                      , text
                      , xdg-basedir

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , google-contacts
                      , aeson
                      , bytestring

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/google-contacts
